kde-runtime (4:4.7.4-2) UNRELEASED; urgency=low

  [ Felix Geyer ]
  * Drop /usr/bin/trash4 symlink since it's not needed anymore and was broken
    anyway.

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sat, 03 Mar 2012 13:42:41 +0100

kde-runtime (4:4.7.4-1) experimental; urgency=low

  * New upstream release.

  [ Eshat Cakar ]
  * Bump build dependency on kde-sc-dev-latest to 4:4.7.4.
  * Add myself to uploaders.

  [ José Manuel Santamaría Lema ]
  * Bump shared-desktop-ontologies kde-runtime dependency to 0.8.
  * kdebase-runtime and kdebase-runtime-dbg dummy packages are now in section
    "oldlibs."

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sun, 18 Dec 2011 01:40:20 +0100

kde-runtime (4:4.7.2-1) experimental; urgency=low

  * New upstream release.

  [ Lisandro Damián Nicanor Pérez Meyer ]
  * Remove patch dont_show_netattach_outside_kde.diff, it has been merged
    upstream.
  * Bump build dependencies:
    - shared-desktop-ontologies to >= 0.7.
    - kdelibs5-dev to >= 4:4.7.
  * Upstream re-included nepomukcontroller, we can close the ITP
    (Closes: #611309).

  [ Daniele E. Domenichelli ]
  * Bump build dependency on kde-sc-dev-latest to 4:4.7.2.
  * Update dependencies:
    - Add libqtwebkit-dev.
    - Add libqzeitgeist-dev.
    - Bump libsoprano-dev to 2.6.50.
  * Update installed files.

  [ José Manuel Santamaría Lema ]
  * Rename source package from kdebase-runtime to kde-runtime in order
    to match upstream naming.
  * Rename the following binary packages:
    - kdebase-runtime -> kde-runtime
    - kdebase-runtime-data -> kde-runtime-data
  * Add the following dummy packages (which depend on kde-runtime-*):
    - kdebase-runtime
    - kdebase-runtime-dbg
  * Update Vcs-* fields.
  * Update lintian overrides.

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sat, 03 Dec 2011 10:46:18 -0300

kdebase-runtime (4:4.6.5-1) unstable; urgency=low

  * New upstream release.
