@@ -1,2 +1,0 @@
-usr/lib/kde4/kcm_phononxine.so
-usr/share/kde4/services/kcm_phononxine.desktop
