@@ -1,7 +1,5 @@
 #!/usr/bin/make -f
 
-dh = --with=xine
-
 include /usr/share/pkg-kde-tools/qt-kde-team/2/debian-qt-kde.mk
 
 .PHONY: override_dh_auto_test
@@ -20,7 +18,3 @@ override_dh_fixperms:
 
 override_dh_strip:
 	$(overridden_command) --dbg-package=kde-runtime-dbg
-
-override_dh_xine:
-	$(overridden_command) -pkde-config-phonon-xine
-
